--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "lucide-react": "^0.321.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.4",
+    "reactjs-popup": "^2.0.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.7.3",
